se mejora los enpoints, ahora ya no se podrá eliminar, actualizar o buscarPorNumDoc a una persona que tenga el estado=false